--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
     "react-native-paper": "^5.12.3",
+    "react-native-picker-select": "^9.1.3",
+    "react-native-safe-area-context": "^4.10.7",
     "react-native-storage": "^0.2.4",
     "react-native-web": "~0.19.10"
   },
